# llm_collection

./: .gitignore  README.md  pyproject.toml
application_demo/backend/: collect_workflow.html
backend/: app.py  hitlworkflow.py  requirements.txt
demo_draft_review/backend/: hitlworkflow.py
demo_minimal_deploy/: README.md  deploy_config.yaml  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
langgraph_examples/notebooks/: 1_basic_manipulation.ipynb  2_function_calling.ipynb  3_RAG.ipynb  7_TNT_LLM.ipynb
llamaindex_examples/demo_deploy_app/: README.md  docker-compose.yml
llamaindex_examples/demo_deploy_app/workflows/: agent_workflow.py
llamaindex_examples/demo_draft_review/frontend/src/app/: page.module.css
llamaindex_examples/demo_minimal_deploy/: README.md  call_server.py
llamaindex_examples/notebooks/: 1_basic_manipulation.ipynb  3_RAG.ipynb  4_function_calling.ipynb  5_evaluation.ipynb  6_observability.ipynb  7_exercise_SEO_content_generation.ipynb  8_TNT_LLM.ipynb  env.azure  env.openai
llamaindex_examples/notebooks/.ipynb_checkpoints/: 1_basic_manipulation-checkpoint.ipynb  4_function_calling-checkpoint.ipynb
llamaindex_examples/notebooks/corrected_notebook/: 1_basic_manipulation_corrected.ipynb  2_structured_outputs-corrected.ipynb  3_RAG-corrected.ipynb  4_function_calling-corrected.ipynb  7_exercise_SEO_content_generation_solved.ipynb  8_exercise_reproduce_tnt_llm.ipynb
llamaindex_examples/notebooks/reasoning_model/: patient_diagnoser.ipynb  r1_joke_maker.ipynb
llamaindex_examples/observability/: pyproject.toml  workflow.py
notebooks/: 1_basic_manipulation.ipynb  2_structured_outputs.ipynb  3_RAG.ipynb  4_function_calling.ipynb  5_evaluation.ipynb  6_observability.ipynb  7_exercise_SEO_content_generation.ipynb  7_observability.ipynb  basic_workflow.html
notebooks/corrected_notebook/: 6_exercise_SEO_content_generation_solved.ipynb
observability/: README.md  pyproject.toml  workflow.py
