[project]
name = "llm-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "boto3>=1.36.24",
    "jupyter>=1.1.1",
    "langchain>=0.2.17",
    "llama-index>=0.5.9",
    "llama-index-llms-azure-openai>=0.2.2",
    "python-dotenv>=1.0.1",
]
