[tool.poetry]
name = "demo-minimal-deploy"
version = "0.1.0"
description = ""
authors = ["admor <adrien_morvan@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.12.2"
llama-deploy = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
