[tool.poetry]
name = "observability"
version = "0.1.0"
description = ""
authors = ["admor <adrien_morvan@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.12.2"
llama-index-callbacks-langfuse = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
