[tool.poetry]
name = "observability"
version = "0.1.0"
description = ""
authors = ["admor <adrien_morvan@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.12.2"
llama-index-callbacks-langfuse = "^0.3.0"
llama-index-utils-workflow = "^0.3.0"
llama-index-core = "^0.12.2"
llama-index-readers-file = "^0.4.0"
llama-index-legacy = "^0.9.48.post4"
llama-index-retrievers-bm25 = "^0.5.0"
langfuse = "^2.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
